Create custom css on cssstyle.css file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body >
      <div class="Myheader card">
-        <h3>Birth Day Calculator</h3>
+        <h2>Birth Day Calculator</h2>
         <p>Find out the Day or the Week you were born and your Akan Name!</p>
       </div>
       <div class="row Mycontent " >
@@ -79,8 +79,8 @@
             </table>
             <table>
               <tr>
-                    <input type="button" class="btn btn-primary" value="Submit" onclick="compute(this.form)">
-                    <input type="reset" class="btn btn-danger float-right" value="Clear">
+                    <input type="button" class="btn btn-primary btn-sm" value="Submit" onclick="compute(this.form)">
+                    <input type="reset" class="btn btn-danger btn-sm float-right" value="Clear">
               </tr>
               <tr>
                 <td>
