Modify layout on index.html file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body >
      <div class="Myheader card">
-        <h2>Birth Day Calculator</h2>
-        <p>Find out the Day or the Week you were born and your Akan Name!</p>
+        <h2>Birthday Calculator</h2>
+        <h5>Find out the Day or the Week you were born and your Ghanian Akan Name</h5>
       </div>
       <div class="row Mycontent " >
         <div class="col-sm-7" >
@@ -48,13 +48,13 @@
                 <td>
                   <div class="form-group">
                     <label for="Day">Day</label>
-                    <input type="text" class="form-control" name="day" placeholder="DD" required="true">
+                    <input type="text" class="form-control" name="day" placeholder="DD" required>
                   </div>
                 </td>
                 <td>
                   <div class="form-group">
-                    <label for="Month">Month</label>
-                    <input type="text" class="form-control" name="month" placeholder="MM" required="true">
+                    <label for="Month">Month </label>
+                    <input type="text" class="form-control" name="month" placeholder="MM" required>
                   </div>
                 </td>
               </tr>
@@ -62,7 +62,7 @@
                 <td>
                   <div class="form-group">
                     <label for="Year">Year</label>
-                    <input type="text" class="form-control" name="year" placeholder="YYYY" required="true">
+                    <input type="text" class="form-control" name="year" placeholder="YYYY" required>
                   </div>
                 </td>
                 <td>
@@ -101,7 +101,7 @@
               <tr>
                   <div>
                     <label for="Akan">Akan Name</label>
-                    <textarea type="text" class="form-control" name="result3"></textarea>
+                    <textarea style="text-align: center;" type="text" class="form-control" name="result3">Your Akan name is ......</textarea>
                 </div>
               </tr>
             </table>
@@ -109,7 +109,7 @@
         </div>
     </div>
       <div class="Myfooter card">
-        <h5>My Portfolio</h5>
+        <h5>Birthday Calculator</h5>
         <h5>© 2021 nancymuriithi. All Rights Reserved.</h5>
     </div>
 </body>
