Perform final changes on index.html file

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Birth Day Calculator</title>
-    <link href="css/bootstrap/css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+    <link href="css/bootstrap/css/bootstrap.css" rel ="stylesheet" type="text/css" >
     <link rel="stylesheet" href="css/cssstyle.css" type="text/css">
     <script src="script.js" charset="utf-8"></script>
   </head>
   <body >
      <div class="Myheader card">
         <h2>Birthday Calculator</h2>
-        <h5>Find out the Day or the Week you were born and your Ghanian Akan Name</h5>
+        <h5>Find out the Day you were born and your Ghanian Akan Name</h5>
       </div>
       <div class="row Mycontent " >
         <div class="col-sm-7" >
